Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-9000

Changing kit device does not mark the kit for saving

XMLWordPrintable

      When changing the device for a kit, the kit is sometimes not marked for saving (does not turn bold), and when clicking OK and then re-opening the Options dialog, the device is back to its previous setting.

      It is somewhat inconsistent when reproducing, but with these steps it seems to happen quite regularly:

      • Select a Kit
      • Open the "Device type" combobox, but close it again without changing the value
      • Change the "Device" to a different device
      • Click OK
      • Open the Options -> Kit page again, the device change is not saved

      I can reproduce this with both a BlackBerry device as well as with a Generic Linux Device, in both the 2.7 branch (HEAD b6257ef7) and the master branch (HEAD 948d8d7b).

        For Gerrit Dashboard: QTCREATORBUG-9000
        # Subject Branch Project Status CR V

            tnatterlund Tobias Nätterlund
            tnatterlund Tobias Nätterlund
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes