ProjectExplorer: Fixed kit sometimes not being marked dirty

Occassionally, the kit would not be marked for saving when changing
the device, due to an uninitialized bool member.

Task-number: QTCREATORBUG-9000
Change-Id: I85059cfd4b7e3106d7d353ba5884e6b93c480231
Reviewed-by: Tobias Hunger <tobias.hunger@digia.com>