src/plugins/projectexplorer/kitinformationconfigwidget.cpp
@@ -292,6 +292,7 @@ void DeviceTypeInformationConfigWidget::currentTypeChanged(int idx)
 DeviceInformationConfigWidget::DeviceInformationConfigWidget(Kit *workingCopy) :
     KitConfigWidget(workingCopy),
     m_isReadOnly(false),
+    m_ignoreChange(false),
     m_comboBox(new QComboBox),
     m_model(new DeviceManagerModel(DeviceManager::instance()))
 {
